--- a/src/components/headerComp/headerstyles.css
+++ b/src/components/headerComp/headerstyles.css
@@ -26,6 +26,7 @@ header h1 {
     font-size: 87px;
     font-size: 6.359649122807018VW;
     font-weight: normal;
+    line-height: 87px;
 }
 
 header .sarah {
