--- a/src/components/workPage/portfolioPages/rebel/rebel.css
+++ b/src/components/workPage/portfolioPages/rebel/rebel.css
@@ -4,6 +4,7 @@
     grid-template-rows: 1fr 1fr;
     background-image: url('../../../../images/rebelBG.png');
     background-position: center;
+    background-repeat: no-repeat;
     /* background-size: cover; */
 }
 
