--- a/src/components/workPage/portfolioPages/rumble/rumble.css
+++ b/src/components/workPage/portfolioPages/rumble/rumble.css
@@ -246,7 +246,7 @@
     grid-column: 2;
     grid-row: 2;
     margin-left: 20px;
-    width: 50%;
+    width: 70%;
     font-size: 16px;
     font-family: Cerabasic;
 }
